SED-3332 fixed overflow

--- a/projects/step-frontend/styles/components/_common-styles.scss
+++ b/projects/step-frontend/styles/components/_common-styles.scss
@@ -76,7 +76,7 @@
 
   #step-main-scrollable-content {
     flex: 1;
-    overflow: hidden;
+    overflow: auto;
     padding-top: 1.6rem;
   }
 
